# Code-Analyzer

./: README.md  SPEC.md  pyproject.toml
code_analyzer/: CodeAnalyzer.command  README.md  ROADMAP.md  SPEC.md  preview_sample.html  pyproject.toml
code_analyzer/scripts/: make_preview.py
code_analyzer/src/code_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
code_analyzer/src/codeanalyzer/: cli.py
code_analyzer/src/codeanalyzer/core/: model.py  pipeline.py  scanner.py
code_analyzer/src/codeanalyzer/gui/: __init__.py  server.py
code_analyzer/src/codeanalyzer/impact/: analyzer.py  diff_impact.py
code_analyzer/src/codeanalyzer/metrics/: churn.py  engine.py  export.py
code_analyzer/src/codeanalyzer/parsers/: __init__.py  base.py  c_cpp_parser.py  python_parser.py
code_analyzer/src/codeanalyzer/report/: compare.py  html_builder.py
code_analyzer/src/codeanalyzer/resolvers/: modules.py  symbols.py
code_analyzer/tests/: test_churn.py  test_cli.py  test_compare.py  test_conditional_includes.py  test_diff_impact.py  test_export.py  test_graph.py  test_gui.py  test_impact.py  test_report.py  test_resolution_metrics.py  test_resolvers.py  test_type_resolution.py
code_analyzer/tests/fixtures/cond_includes/: guard.h  ifdef.c  nested.c  plain.c  platform.cpp
code_analyzer/tests/fixtures/impact_project/: ambcaller.py  app.ts  mod_a.py  mod_b.py
code_analyzer/tests/fixtures/sample_project/: bundle.min.js
code_analyzer/tests/fixtures/type_project/: alpha.py  base_mod.py  beta.py  callers.py  child_mod.py
tests/: conftest.py  (+7 more)
(+52 files in other folders)
